Fixed lazy loading issue. And json overloading. Changed tailwind.config.
